# data-engineering-coding-exercises

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
exercises/mot/: .code  README.md  analysis.py  notebook.py  pyproject.toml  remove.py  start_here.py  testing_stations_sample.csv
exercises/mot/data/: mot_results.csv  sample.csv  station_inspections.csv  testing_stations.csv  vehicle_profiles.csv  welsh_months.csv
exercises/vehicles/: README.md  pyproject.toml
exercises/vehicles/vehicles/: .code  __init__.py  __main__.py  data.py  duckdb_example.py
exercises/vehicles/vehicles/data/: Countries.csv  ImportVolumes.csv  Registrations.csv
vehicles/: .code  model.py
vehicles/data/: Brands.csv
